2.4.4
 - build: do not use development version of dclab
2.4.3
 - enh: improve UI (tooltips, icons)
 - build: Windows build won't start due to breaking change in
   Windows ucrtbase.dll (#64)
 - build: Migrate Windows build to PyInstaller 4.1
2.4.2
 - fix: a regression introduced during refactoring in 2.4.0
   made it impossible to select the temperature for known
   media
 - fix: allow to reorder the dataset list (#46)
 - enh: iconify buttons at top of Analysis View
2.4.1
 - fix: strip white-space characters from line edits in the
   preferences to avoid line breaks introduced in the API key
   via copy-paste
 - fix: not possible to create plots for datasets without the
   bright_avg feature; added a check for feature availability
   before updating the interface (#62)
2.4.0
 - feat: allow to set Young's modulus parameters for all
   open datasets via the "Bulk action" menu (#60)
 - fix: force temperature for Young's modulus computation
   to the value stored in the dataset for the "config"
   scenario
 - enh: update menu keyboard shortcuts
2.3.0
 - enh: added preferences dialog
 - enh: improved user experience for searching DCOR data
 - ref: migrate settings to QSettings
 - setup: remove appdirs dependency, because we let QSettings
   determine where to store settings
2.2.6
 - fix: support user-defined media introduced in dclab 0.29.1 (#53)
 - fix: porosity box filter precision at lower limit (#58)
 - docs: update bibliography
 - bump dclab from 0.29.0 to 0.29.1
2.2.5
 - setup: correct installation directory on Windows
 - setup: bump dclab from 0.27.11 to 0.29.0
 - fix: main window not focused after startup (#52)
2.2.4
 - fix: UI slot issues (probably a racing condition) in the
   analysis view; editing the viscosity for "other" medium not
   possible on frozen Windows and macOS application (#49)
2.2.3
 - fix: update Quick View plot when values for the Young's modulus
   computation are changed (#44)
 - fix: use fixed point size in Block Matrix